deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swagger-ui
  labels:
    app: swagger-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: swagger-ui
  template:
    metadata:
      labels:
        app: swagger-ui
    spec:
      containers:
      - name: swagger-ui
        image: swaggerapi/swagger-ui:v3.14.1
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: local-example
          mountPath: /usr/share/nginx/html/file-example
      volumes:
        - name: local-example
          configMap:
            name: local-example
            items:
              - key: swagger
                path: local.example.yml
